# emanet_voxtral

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSE_CRITIQUE_COMPLETE.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_COMPLET.md  AUDIT_CRITIQUE_TROISIEME_TOUR.md  CLAUDE.md  CORRECTIONS_APPLIQUEES.md  DEMARRAGE_RAPIDE.md  DEPLOYMENT_B200.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_JUPYTER.md  EDGE_CASES_ROBUSTNESS_ANALYSIS.md  GEMINI.md  GOVERNANCE.md  Makefile  PROBLEMES_TRAITES_ET_A_TRAITER.md  PROMPT_OPTIMIZATION_REPORT.md  README.md  README_USER_GUIDE.md  UTILISATION_SIMPLE.md  analyse_python_senior.md  auth_setup.py  benchmark.py  check_model_vram.py  cli_enhanced.py  cli_feedback.py  cli_help.py  cli_wizard.py  code_quality_analyzer.py  code_quality_report.json  code_quality_report.md  commit_message.tmp  config.py  config.yaml  constants.py  current_deps.txt  diagnose_all.py  (+37 more)
.github/workflows/: ci.yml
config/: __init__.py  app_config.py
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/api/: domain_models.rst  main.rst
metrics/: metrics_1755542525.json  metrics_1755542549.json
services/: __init__.py  processing_service.py  validation_service.py
tests/: __init__.py  test_domain_models.py  test_domain_models_property.py  test_edge_cases.py  test_end_to_end.py  test_error_boundary.py  test_integration_modules.py  test_main_refactored.py  test_ml_validation.py  test_parallel_processor_optimized.py  test_parallel_processor_property.py  test_telemetry.py
utils/: __init__.py  antibot_utils.py  audio_cache.py  audio_utils.py  auth_manager.py  b200_optimizer.py  error_messages.py  gpu_utils.py  logging_config.py  memory_manager.py  model_utils.py  performance_profiler.py  processing_utils.py  reproducibility.py  security_utils.py  service_container.py  srt_utils.py  system_utils.py  telemetry.py  tensor_validation.py  translation_quality.py  validation_utils.py
